--- a/Style/Style.css
+++ b/Style/Style.css
@@ -1,3 +1,10 @@
+header {
+  background: url(/examenkerst-XenXheka/images/wave.svg);
+  background-position: start;
+  background-size: cover;
+  margin: 0;
+  height: 25vh;
+}
 .container {
   display: flex;
   justify-content: end;
@@ -10,8 +17,7 @@
 }
 .items a {
   text-decoration: none;
-  background-color: aquamarine;
-  border-radius: 5px;
+  color: black;
 }
 .container .item1 img {
   height: 50px;
@@ -24,29 +30,39 @@
   display: flex;
   justify-content: end;
 }
+section .section1 .item2 p {
+  display: flex;
+  flex: 0 0 auto;
+}
 
 section .section1 {
   height: 400px;
-
   display: flex;
+  justify-content: center;
   align-items: center;
+  gap: 100px;
 }
 .section1 {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
 }
 section .section2 {
-  height: 560px;
+  height: 390px;
 }
 .section2 {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 40px;
+}
+.section2 .items3 {
+  max-width: 375px;
+  overflow: hidden;
 }
 .section2 .items3 img {
   height: 300px;
-  width: 400px;
+  max-width: initial;
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
 }
@@ -54,6 +70,15 @@ section .section2 {
   display: flex;
   justify-content: center;
   justify-content: space-around;
+  align-items: center;
   background-color: grey;
   color: white;
+  height: 50px;
+}
+
+.itemss {
+  border: 2px blue solid;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  max-width: initial;
 }
